2008-07-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-screen.c (ccm_screen_check_stack): 
      - Damage window which its position changed in stack.

2008-07-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_create_gl_drawable):
	* src/ccm-window-glitz.c (ccm_window_glitz_create_gl_drawable):
      - Use latest glitz API.
	* src/ccm-screen.c (ccm_screen_paint):
      - Clean screen surface on startup.

2008-07-18  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/shadow/ccm-shadow.c (ccm_shadow_need_shadow): Allow shaded window
                                                            to have shadow.
	* src/ccm-screen.c (ccm_screen_paint): Add track damage colorization.

2008-07-18  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/shadow/ccm-shadow.c (ccm_shadow_check_needed): Fix crash.

2008-07-18  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/shadow/ccm-shadow.c (ccm_shadow_finalize): Remove check shadow on
                                                         window destruction.

2008-07-17  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/Makefile.am:
	* src/ccm-timeline.c:
	* src/ccm-timeout-pool.c:
	* src/ccm-timeout-pool.h: Add timeout pool from clutter for timeline.

2008-07-16  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Sync display on end of window creation.

2008-07-15  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Damage screen region covered by window on unmap.
    
2008-07-15  Nicolas Bruguier  <gandalfn@club-internet.fr>
    
    * src/ccm-screen.c: Consider first window opaque viewable which covered
                        all screen as desktop type window.
                        
2008-07-15  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/menu-animation/ccm-menu-animation.c: Set animation depending the 
                                                   mouse on map.